# Neetechs_trading

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  backtest.py  combined_python_code.py  config.py  data_fetcher.py  docker-compose.yml  main.py  portfolio_backtest.py  pyproject.toml  readme.md  requirements.txt  strategy.py  tickers.py
.github/workflows/: ci.yml  nightly.yml
app/: __init__.py  __main__.py  alerts.py  backtest.py  bench.py  cli.py  config_validate.py  dashboard.py  experiment.py  health.py  profile.py  reporting.py  robustness.py  signal.py  state.py
app/brokers/: alpaca.py  base.py  paper.py
app/live/: __init__.py  __main__.py  cli.py  runner.py
data/: AAPL.csv  AMZN.csv  GOOGL.csv  MSFT.csv  NVDA.csv
neetechs_trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: AAPL_backtest.csv  AMZN_backtest.csv  GOOGL_backtest.csv  MSFT_backtest.csv  NVDA_backtest.csv  summary.csv
scripts/: run.ps1
src/tradinglab/: config.py
src/tradinglab/cli/: main.py
src/tradinglab/data/: fetcher.py  panel.py  tickers.py
src/tradinglab/engine/: portfolio.py
src/tradinglab/experiments/: runner.py  splits.py
src/tradinglab/metrics/: performance.py
src/tradinglab/robustness/: __init__.py  allocation.py  monte_carlo.py  regimes.py  rolling.py  (+3 more)
tests/: test_backtest.py  test_execution_risk.py  test_experiment_outputs.py  test_experiment_plumbing.py  test_health.py  test_live.py  test_live_safety.py  test_momentum_strategy.py  test_perf_equivalence.py  test_robustness.py  test_signal.py
(+1 files in other folders)
