[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neetechs-trading"
version = "0.6.0"
description = "Neetechs Trading Lab"
requires-python = ">=3.10"
readme = "readme.md"
license = {text = "Proprietary"}
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2.40",
  "requests>=2.31",
  "beautifulsoup4>=4.11.1",
  "lxml>=5.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]
dashboard = ["streamlit>=1.30", "matplotlib>=3.8"]

[project.scripts]
neetechs-backtest = "app.backtest:run"
neetechs-experiment = "app.experiment:run"
neetechs-live = "app.live.cli:run"
neetechs-health = "app.health:run"
neetechs-robustness = "app.robustness:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["app", "app.*", "tradinglab", "tradinglab.*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
